PhysMach/3rdparty/codemercs/osx/IOWarriorLib.h

struct IOWarriorListNodeStruct
{
    IOWarriorHIDDeviceInterface**   ioWarriorHIDInterface;			// IOKits interface object
    struct                          IOWarriorListNodeStruct* nextNode;	// pointer to the next interface
    CFStringRef						serialNumber;				// the device serial number
    int                             interfaceType;				// the type of the interface
	bool							interfaceOpen;					
};
typedef struct IOWarriorListNodeStruct IOWarriorListNode;
/*!
@typedef IOWarriorCallbackFunctionPtr
 @abstract A function pointer type for IOWarriors callback function.
 @discussion A function pointer type for IOWarriors callback function, that gets called whenever an IOWarrior device is added or removed. You can install you own callback function using the IOWarriorSetCallback fucntion.
 */
typedef void (*IOWarriorDeviceCallbackFunctionPtr) (void* inRefCon);
/*!
@function IOWarriorSetDeviceCallback
 @abstract Sets the function to be called when IOWarrior devices ar added or removed. 
 @discussion Use this function to install a custom callback function. You function will be called whenever IOWarrior devices are added or removed from the system. You should invalidate any references to IOWarriorListNode structures you might have saved when your callback functions gets called. Be sure to call IOWarriorCountInterfaces at least once after you callback function was invoked before calling any other functions from the IOWarrior Library.
 */
void IOWarriorSetDeviceCallback (IOWarriorDeviceCallbackFunctionPtr inCallbackPtr, void* inRefCon);
/*!
@function IOWarriorSetInterruptCallback
 @abstract Sets the function to be called when a report data is received on inInterface. 
 @discussion Use this function to install a custom callback routine that gets invoked when data is received on interface inInterface. This function will only work when your application was compiled on Mac OS 10.3 or later and is running on Mac OS 10.3 or later. For earlier systems the implementation of the function is hidden from the compiler using preprocessor commands, because the system does not implement the required API calls.
 @param inInterface The interface where your data arrives
 @param inBuffer A buffer provided by the caller.
 @param inBufferSize The size of inBuffer.
 @param inCallbackPtr A pointer to your callback function. See IOHIDLib.h for more info.
 @param inRefCon A reference value passed to your callback on invocation.
 */
int IOWarriorSetInterruptCallback (IOWarriorHIDDeviceInterface** inInterface, void* inBuffer, UInt32 inBufferSize, 
                                  IOHIDReportCallbackFunction inCallbackPtr, void* inRefCon);
IOWarriorListNode* IOWarriorListNodeForInterface (IOWarriorHIDDeviceInterface** inInterface);
IOReturn IOWarriorOpenInterfaceIfNecessary (IOWarriorHIDDeviceInterface** inInterface);
IOReturn IOWarriorCloseInterfaceIfNecessary(IOWarriorHIDDeviceInterface** inInterface);