PhysMach/3rdparty/codemercs/osx/iowkit.pas


  {!
  @function IOWarriorSetDeviceCallback
   @abstract Sets the function to be called when IOWarrior devices ar added or removed. 
   @discussion Use this function to install a custom callback function. You function will be called whenever IOWarrior devices are added or removed from the system. You should invalidate any references to IOWarriorListNode structures you might have saved 
    }
  procedure IOWarriorSetDeviceCallback(inCallbackPtr:IOWarriorDeviceCallbackFunctionPtr; var inRefCon:pointer);cdecl;external External_library name 'IOWarriorSetDeviceCallback';

  {!
  @function IOWarriorSetInterruptCallback
   @abstract Sets the function to be called when a report data is received on inInterface. 
   @discussion Use this function to install a custom callback routine that gets invoked when data is received on interface inInterface. This function will only work when your application was compiled on Mac OS 10.3 or later and is running on Mac OS 10.3 o
   @param inInterface The interface where your data arrives
   @param inBuffer A buffer provided by the caller.
   @param inBufferSize The size of inBuffer.
   @param inCallbackPtr A pointer to your callback function. See IOHIDLib.h for more info.
   @param inRefCon A reference value passed to your callback on invocation.
    }
  function IOWarriorSetInterruptCallback(var inInterface:PIOWarriorHIDDeviceInterface; var inBuffer:pointer; inBufferSize:UInt32; inCallbackPtr:IOHIDReportCallbackFunction; var inRefCon:pointer):cint;cdecl;external External_library name 'IOWarriorSetInter

  function IOWarriorListNodeForInterface(var inInterface:PIOWarriorHIDDeviceInterface):^IOWarriorListNode;cdecl;external External_library name 'IOWarriorListNodeForInterface';

  function IOWarriorOpenInterfaceIfNecessary(var inInterface:PIOWarriorHIDDeviceInterface):IOReturn;cdecl;external External_library name 'IOWarriorOpenInterfaceIfNecessary';

  function IOWarriorCloseInterfaceIfNecessary(var inInterface:PIOWarriorHIDDeviceInterface):IOReturn;cdecl;external External_library name 'IOWarriorCloseInterfaceIfNecessary';


implementation


end.
